# advent-of-code

./: .gitignore
2021/day01/: Cargo.toml  input.txt
2021/day01/src/: main.rs
2021/day02/: Cargo.toml
2021/day02a/: Cargo.toml
2021/day02a/src/: main.rs  position.rs
2021/day02b/src/: file_ops.rs  main.rs  position.rs
2022/day01/src/: file_processes.rs  main.rs
2022/day02/: Cargo.toml
2022/day02/src/: choice.rs  lib.rs  outcome.rs
2022/day04/: Cargo.toml
2022/day04/src/: lib.rs  parser.rs
