[package]
name = "day04"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day04p1"
path = "src/bin/day04p1.rs"

[[bin]]
name = "day04p2"
path = "src/bin/day04p2.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
nom = "7.1.1"